--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
     "@mui/x-data-grid": "^8.5.3",
+    "ajv": "^8.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
