--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^7.1.2",
     "@mui/x-data-grid": "^8.5.3",
     "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
@@ -30,6 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
+    "tsx": "^4.20.5",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
