--- a/.github/workflows/vitestatic.yml
+++ b/.github/workflows/vitestatic.yml
@@ -37,6 +37,8 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
+      - name: Validate JSON
+        run: npm validate
       - name: Build
         run: npm run build
       - name: Setup Pages
