--- a/.github/workflows/vitestatic.yml
+++ b/.github/workflows/vitestatic.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Validate JSON
-        run: npm validate
+        run: npm run validate
       - name: Build
         run: npm run build
       - name: Setup Pages
