--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "validate": "npx tsx src/schema_validation.ts"
+    "validate": "npx tsx src/schema_validation.ts && cd src && npx tsx src/interface_generation.ts && cd -"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -19,11 +19,13 @@
     "@mui/x-data-grid": "^8.5.3",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "json-schema-to-typescript": "^15.0.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/node": "^24.3.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
