--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "ajv-formats": "^3.0.1",
     "json-schema-to-typescript": "^15.0.4",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
